plugins {
    id 'dev.architectury.loom' version '1.17.487' apply false
    id 'architectury-plugin' version '3.5.169'
    id 'com.gradleup.shadow' version '9.2.2' apply false
}

architectury {
    minecraft = project.minecraft_version
}

allprojects {
    group = rootProject.maven_group
    version = rootProject.mod_version + "+" + rootProject.minecraft_version_range
}

configure(subprojects.findAll { it.name != 'core' }) {
    apply plugin: 'dev.architectury.loom'
    apply plugin: 'architectury-plugin'
    apply plugin: 'com.gradleup.shadow'
    apply plugin: 'maven-publish'

    base {
        // Set up a suffixed format for the mod jar names, e.g. `example-fabric`.
        archivesName = "$rootProject.archives_name-$project.name"
    }

    repositories {
        mavenLocal()
        maven {
            name = "Fuzs Mod Resources"
            url = "https://raw.githubusercontent.com/Fuzss/modresources/main/maven/"
        }
        maven {
            name = "Terraformers"
            url = "https://maven.terraformersmc.com/"
        }
        maven {
            name "IzzelAliz Maven"
            url "https://maven.izzel.io/releases/"
        }
        maven {
            name "ParchmentMC"
            url "https://maven.parchmentmc.org/"
        }
        maven {
            name "JitPack"
            url 'https://jitpack.io'
        }
        flatDir{
            dir "$projectDir/libs"
        }
    }

    loom {
        silentMojangMappingsLicense()
    }

    dependencies {
        minecraft "net.minecraft:minecraft:$rootProject.minecraft_version"
        mappings loom.officialMojangMappings()
        compileOnly "org.projectlombok:lombok:$rootProject.lombok_version" // Add Lombok for compilation
        annotationProcessor "org.projectlombok:lombok:$rootProject.lombok_version" // Enable annotation processing
        testCompileOnly "org.projectlombok:lombok:$rootProject.lombok_version" // For test sources
        testAnnotationProcessor "org.projectlombok:lombok:$rootProject.lombok_version"
        testImplementation "org.junit.jupiter:junit-jupiter:$rootProject.junit_version"
        testRuntimeOnly "org.junit.platform:junit-platform-launcher"
        implementation "dev.icyllis:modernui-core:$rootProject.modernui_version"
        implementation("icyllis.modernui:ModernUI-Markflow:$rootProject.modernui_version") {
//            exclude group: "icyllis.modernui", module: "ModernUI-Core"
        }
    }

    java {
        // Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
        // if it is present.
        // If you remove this line, sources will not be generated.
        withSourcesJar()

        sourceCompatibility = JavaVersion.VERSION_21
        targetCompatibility = JavaVersion.VERSION_21
    }

    tasks.withType(JavaCompile).configureEach {
        it.options.release = 21
    }

    tasks.withType(JavaExec).configureEach {
        jvmArgs("--add-opens", "java.base/java.lang.invoke=ALL-UNNAMED")
    }

    // Configure Maven publishing.
    publishing {
        publications {
            mavenJava(MavenPublication) {
                artifactId = base.archivesName.get()
                from components.java
            }
        }

        // See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
        repositories {
            // Add repositories to publish to here.
            // Notice: This block does NOT have the same function as the block in the top level.
            // The repositories here will be used for publishing your artifact, not for
            // retrieving dependencies.
        }
    }
}
